Fix vertical alignment of brand name

--- a/app/assets/stylesheets/layout.css.less
+++ b/app/assets/stylesheets/layout.css.less
@@ -109,8 +109,11 @@ ul.navbar-nav li a {
 }
 
  /* navbar */
-.navbar-brand .material-icons {
-    margin-top: -2px;
+.navbar-brand  {
+  margin-top: -1px;
+  .material-icons {
+    margin-top: -1px;
+  }
 }
 .navbar-flex {
     display: flex;
